add comic collector to resume

--- a/werne2j_resume.tex
+++ b/werne2j_resume.tex
@@ -93,6 +93,12 @@ Responsible for learning and applying best practices in front-end and back-end w
 \begin{entrylist}
 %------------------------------------------------
 \entry
+{2016}
+{Comic Collector (In-Development)}
+{iOS - Objective-C}
+{A comic book collecting iOS application. Utilizing Realm and CocoaPods. Can be found in my Github.}\\
+
+\entry
 {2014}
 {OneRepMax (Not In App Store)}
 {iOS - Swift}
@@ -119,6 +125,6 @@ Responsible for learning and applying best practices in front-end and back-end w
 
 \section{Technologies}
 
-Swift, Objective-C, Python, JavaScript, AngularJS, NodeJS, HTML5, CSS3, Git/Github, Less/Sass, Grunt, Postgres, Cloudant, Redis, Django, D3, jQuery, SQL, Java
+Swift, Objective-C, Python, JavaScript, AngularJS, NodeJS, HTML5, CSS3, Git/Github, TravisCI, REST, Less/Sass, Grunt, Postgres, NoSQL/Cloudant, Redis, Django, D3, jQuery, SQL, Java
 
 \end{document}
