--- a/werne2j_resume.tex
+++ b/werne2j_resume.tex
@@ -24,7 +24,7 @@
 
 \begin{document}
 
-\header{Jake}{Wernette}{Mobile And Web Application Developer} 
+\header{Jake}{Wernette}{Full Stack and Mobile Software Engineer} 
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -32,7 +32,7 @@
 
 \begin{aside} % In the aside, each new line forces a line break
 \section{contact}
-10114 Falkland Avenue Apt. 206
+10114 Falkland Ave. Apt. 206
 Raleigh NC, 27617
 (989) 506-1910
 ~
@@ -48,15 +48,18 @@ Raleigh NC, 27617
 
 \begin{entrylist}
 %------------------------------------------------
+
+\entry
+{2011--2013}
+{Computer Science{\normalfont}}
+{Saginaw Valley State University}
+
 \entry
 {2013--2014}
 {B.S in Computer Science{\normalfont}}
 {Central Michigan University}
-{\emph{Relevant Course Work}
-\begin{itemize}
-\item Object-Oriented Programming with Java.
-\item Computer Design \& Architecture.
-\end{itemize}}
+
+%------------------------------------------------
 \end{entrylist}
 
 %----------------------------------------------------------------------------------------
@@ -68,11 +71,12 @@ Raleigh NC, 27617
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2015--Present}
+{2017--Present}
 {IBM}
 {Raleigh, North Carolina}
-{\emph{Software Engineer} \\
-Responsible for developing internal web and mobile applications under the Innovation Lab}\\
+{\emph{Software Engineer II (Sept 2017 - Present)} \\
+\emph{Software Engineer I (Jan 2015 - Sept 2017)} \\
+Responsible for designing, developing, testing, and supporting strategic tools to be used in IBM's internal business from proof of concept through production.}\\
 
 \entry
 {2013--2014}
@@ -94,27 +98,21 @@ Responsible for learning and applying best practices in front-end and back-end w
 %------------------------------------------------
 \entry
 {2016}
-{Comic Collector (In-Development)}
+{Comic Collector (Not In App Store)}
 {iOS - Objective-C}
-{A comic book collecting iOS application. Utilizing Realm and CocoaPods. Can be found in my Github.}\\
+{A comic book collecting iOS application. Utilizing Realm and CocoaPods.}\\
 
 \entry
 {2014}
 {OneRepMax (Not In App Store)}
 {iOS - Swift}
-{A social networking app built in Swift, targeting iOS 8, for power lifters to share when they get a new personal record on a specific weight lifting movement.}\\
+{A social networking app for power lifters to share when they get a new personal record on a specific weight lifting movement.}\\
 
 \entry
 {2013-2014}
-{MyStatBook}
-{mystatbook.com}
-{An interactive website powered by Django Web Framework, for baseball coaches of all levels to keep track of Rosters, Schedules and Statistics.}\\
-
-\entry
-{Spring 2013}
-{BusTimes}
-{Code can be found in Github}
-{A mobile web app using jQuery Mobile and powered by Django Web Framework, that shows users what time buses will be at certain bus stops and where this bus stops are located.}
+{MyStatBook (mystatbook.com)}
+{Django}
+{An interactive website for baseball coaches of all levels to keep track of Rosters, Schedules and Statistics.}\\
 
 %------------------------------------------------
 \end{entrylist}
@@ -125,6 +123,9 @@ Responsible for learning and applying best practices in front-end and back-end w
 
 \section{Technologies}
 
-Swift, Objective-C, Python, JavaScript, AngularJS, NodeJS, HTML5, CSS3, Git/Github, TravisCI, REST, Less/Sass, Grunt, Postgres, NoSQL/Cloudant, Redis, Django, D3, jQuery, SQL, Java
+JavaScript (es6/7), Node JS, React JS, iOS Development - Objective-C/Swift, HTML, CSS, Django, Python, PostgreSQL, SQL, Vue JS, Angular JS, Backbone/Marionette JS, Git/Github, Less/Sass, Grunt/Gulp, Docker, TravisCI, CouchDB, NoSQL
 
+\section{Hobbies}
+
+Sports (former college baseball player), Weightlifting, Travel, Food, Comic Books, Music (Vinyl), Books
 \end{document}
