--- a/werne2j_resume.tex
+++ b/werne2j_resume.tex
@@ -32,12 +32,9 @@
 
 \begin{aside} % In the aside, each new line forces a line break
 \section{contact}
-10114 Falkland Ave. Apt. 206
-Raleigh NC, 27617
-(989) 506-1910
-~
 \href{mailto:werne2@gmail.com}{werne2j@gmail.com}
 \href{github.com/werne2j}{github.com/werne2j}
+~
 \end{aside}
 
 %----------------------------------------------------------------------------------------
@@ -50,12 +47,7 @@ Raleigh NC, 27617
 %------------------------------------------------
 
 \entry
-{2011--2013}
-{Computer Science{\normalfont}}
-{Saginaw Valley State University}
-
-\entry
-{2013--2014}
+{1/2013--12/2014}
 {B.S in Computer Science{\normalfont}}
 {Central Michigan University}
 
@@ -71,7 +63,7 @@ Raleigh NC, 27617
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2017--Present}
+{2015--Present}
 {IBM}
 {Raleigh, North Carolina}
 {\emph{Software Engineer II (Sept 2017 - Present)} \\
@@ -97,6 +89,12 @@ Responsible for learning and applying best practices in front-end and back-end w
 \begin{entrylist}
 %------------------------------------------------
 \entry
+{2017-Present}
+{Family Tree Project}
+{Go/React JS/PostgreSQL}
+{Web app to digitize my family tree}\\
+
+\entry
 {2016}
 {Comic Collector (Not In App Store)}
 {iOS - Objective-C}
@@ -106,13 +104,13 @@ Responsible for learning and applying best practices in front-end and back-end w
 {2014}
 {OneRepMax (Not In App Store)}
 {iOS - Swift}
-{A social networking app for power lifters to share when they get a new personal record on a specific weight lifting movement.}\\
+{Mobile app for power lifters to share new personal records on lifts}\\
 
 \entry
 {2013-2014}
 {MyStatBook (mystatbook.com)}
 {Django}
-{An interactive website for baseball coaches of all levels to keep track of Rosters, Schedules and Statistics.}\\
+{Web app for baseball coaches to keep track of Rosters, Schedules and Statistics.}\\
 
 %------------------------------------------------
 \end{entrylist}
@@ -122,10 +120,11 @@ Responsible for learning and applying best practices in front-end and back-end w
 %----------------------------------------------------------------------------------------
 
 \section{Technologies}
-
-JavaScript (es6/7), Node JS, React JS, iOS Development - Objective-C/Swift, HTML, CSS, Django, Python, PostgreSQL, SQL, Vue JS, Angular JS, Backbone/Marionette JS, Git/Github, Less/Sass, Grunt/Gulp, Docker, TravisCI, CouchDB, NoSQL
+{Languages: JS(es6/7)/HTML/CSS, iOS Development (Objective-C/Swift), Python, Go} \\
+{Frameworks: Node JS, React JS, React Native, Django, Vue JS, Angular JS} \\
+{Software: Docker, Kubernetes, Kafka, TravisCI} \\
+{Databases: SQL, NoSQL, PostgreSQL, CouchDB} \\
 
 \section{Hobbies}
-
 Sports (former college baseball player), Weightlifting, Travel, Food, Comic Books, Music (Vinyl), Books
 \end{document}
