--- a/werne2j_resume.tex
+++ b/werne2j_resume.tex
@@ -24,18 +24,15 @@
 
 \begin{document}
 
-\header{Jake}{Wernette}{Full Stack and Mobile Software Engineer} 
+\header
+{Jake}{Wernette}
+{Full Stack and Mobile Software Engineer}
+{werne2j@gmail.com\space\space\space\space\space\space github.com/werne2j}
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{aside} % In the aside, each new line forces a line break
-\section{contact}
-\href{mailto:werne2@gmail.com}{werne2j@gmail.com}
-\href{github.com/werne2j}{github.com/werne2j}
-~
-\end{aside}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -68,14 +65,15 @@
 {Raleigh, North Carolina}
 {\emph{Software Engineer II (Sept 2017 - Present)} \\
 \emph{Software Engineer I (Jan 2015 - Sept 2017)} \\
-Responsible for designing, developing, testing, and supporting strategic tools to be used in IBM's internal business from proof of concept through production.}\\
+Responsible for designing, developing, testing, and supporting strategic tools to be used in IBM's internal business from proof of concept through production.
+Built Node JS REST API from scratch, responsible for bringing React JS into my lab, given the task of moving legacy applications to Kubernetes. }\\
 
 \entry
 {2013--2014}
 {CMU ResLife Technology Operations}
 {Mt. Pleasant, Michigan}
 {\emph{Web Application Developer} \\
-Responsible for learning and applying best practices in front-end and back-end web development.}\\
+Responsible for learning and applying best practices in front-end and back-end web development. Used Django/Python to build and support web applications for university recreation and residence life.}\\
 
 %------------------------------------------------
 \end{entrylist}
@@ -109,7 +107,7 @@ Responsible for learning and applying best practices in front-end and back-end w
 \entry
 {2013-2014}
 {MyStatBook (mystatbook.com)}
-{Django}
+{Django/Python}
 {Web app for baseball coaches to keep track of Rosters, Schedules and Statistics.}\\
 
 %------------------------------------------------
@@ -120,11 +118,9 @@ Responsible for learning and applying best practices in front-end and back-end w
 %----------------------------------------------------------------------------------------
 
 \section{Technologies}
-{Languages: JS(es6/7)/HTML/CSS, iOS Development (Objective-C/Swift), Python, Go} \\
-{Frameworks: Node JS, React JS, React Native, Django, Vue JS, Angular JS} \\
+{Languages: JS(ES6/7)/HTML/CSS, iOS Development (Objective-C/Swift), Python, Go} \\
+{Frameworks: Node JS, React JS, React Native, Redux, Django, Vue JS, Angular JS} \\
 {Software: Docker, Kubernetes, Kafka, TravisCI} \\
-{Databases: SQL, NoSQL, PostgreSQL, CouchDB} \\
+{Databases: SQL, NoSQL, PostgreSQL, CouchDB, Redis} \\
 
-\section{Hobbies}
-Sports (former college baseball player), Weightlifting, Travel, Food, Comic Books, Music (Vinyl), Books
 \end{document}
