Add phone number

--- a/werne2j_resume.tex
+++ b/werne2j_resume.tex
@@ -27,7 +27,7 @@
 \header
 {Jake}{Wernette}
 {Full Stack and Mobile Software Engineer}
-{werne2j@gmail.com\space\space\space\space\space\space github.com/werne2j}
+{989-506-1010\space\space\space\space\space\space werne2j@gmail.com\space\space\space\space\space\space github.com/werne2j}
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
