--- a/werne2j_resume.tex
+++ b/werne2j_resume.tex
@@ -38,13 +38,12 @@
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 
-\section{education}
+\section{Education}
 
 \begin{entrylist}
 %------------------------------------------------
-
 \entry
-{1/2013--12/2014}
+{December 2014}
 {B.S in Computer Science{\normalfont}}
 {Central Michigan University}
 
@@ -55,18 +54,25 @@
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
-\section{experience}
+\section{Professional Experience}
 
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2015--Present}
+{2018--Present}
+{Red Hat}
+{Raleigh, North Carolina}
+{\emph{Software Engineer - CI/CD} \\
+Responsible for automating manual build, test and release processes. Currently working on a Jenkins Pipeline to build Tensorflow on RHEL, CentOS and Fedora.}\\
+
+\entry
+{2015--2018}
 {IBM}
 {Raleigh, North Carolina}
 {\emph{Software Engineer II (Sept 2017 - Present)} \\
 \emph{Software Engineer I (Jan 2015 - Sept 2017)} \\
-Responsible for designing, developing, testing, and supporting strategic tools to be used in IBM's internal business from proof of concept through production.
-Built Node JS REST API from scratch, responsible for bringing React JS into my lab, given the task of moving legacy applications to Kubernetes. }\\
+Responsible for designing, developing, testing, and supporting tools to be used in IBM's internal business from proof of concept through production.
+Built Node JS REST API from scratch. Built multiple web applications from scratch. Built multiple React JS component libraries and NPM packages.}\\
 
 \entry
 {2013--2014}
@@ -82,16 +88,10 @@ Responsible for learning and applying best practices in front-end and back-end w
 %	PROJECTS SECTION
 %----------------------------------------------------------------------------------------
 
-\section{projects}
+\section{Personal Projects}
 
 \begin{entrylist}
 %------------------------------------------------
-\entry
-{2017-Present}
-{Family Tree Project}
-{Go/React JS/PostgreSQL}
-{Web app to digitize my family tree}\\
-
 \entry
 {2016}
 {Comic Collector (Not In App Store)}
@@ -118,9 +118,9 @@ Responsible for learning and applying best practices in front-end and back-end w
 %----------------------------------------------------------------------------------------
 
 \section{Technologies}
-{Languages: JS(ES6/7)/HTML/CSS, iOS Development (Objective-C/Swift), Python, Go} \\
-{Frameworks: Node JS, React JS, React Native, Redux, Django, Vue JS, Angular JS} \\
-{Software: Docker, Kubernetes, Kafka, TravisCI} \\
-{Databases: SQL, NoSQL, PostgreSQL, CouchDB, Redis} \\
+{JS(ES6/7)/HTML/CSS, iOS Development (Objective-C/Swift), Python, Go, } \\
+{Node JS, React JS, Django, Angular JS, React Native, Redux, Jest, Mocha, Enzyme} \\
+{Docker, Kubernetes, Kafka, Travis CI, Jenkins, Webpack} \\
+{SQL, NoSQL, PostgreSQL, CouchDB, Redis} \\
 
 \end{document}
