--- a/werne2j_resume.tex
+++ b/werne2j_resume.tex
@@ -27,7 +27,7 @@
 \header
 {Jake}{Wernette}
 {Full Stack and Mobile Software Engineer}
-{989-506-1010\space\space\space\space\space\space werne2j@gmail.com\space\space\space\space\space\space github.com/werne2j}
+{werne2j@gmail.com\space\space\space\space\space\space github.com/werne2j}
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -63,52 +63,51 @@
 {Red Hat}
 {Raleigh, North Carolina}
 {\emph{Software Engineer - CI/CD} \\
-Responsible for automating manual build, test and release processes. Currently working on a Jenkins Pipeline to build Tensorflow on RHEL, CentOS and Fedora.}\\
+Responsible for automating manual build, test and release processes. Worked on a Jenkins Shared Pipeline. Built a Command Line tool using Go. }\\
 
 \entry
 {2015--2018}
 {IBM}
 {Raleigh, North Carolina}
-{\emph{Software Engineer II (Sept 2017 - Present)} \\
+{\emph{Software Engineer II (Sept 2017 - Aug 2018)} \\
 \emph{Software Engineer I (Jan 2015 - Sept 2017)} \\
 Responsible for designing, developing, testing, and supporting tools to be used in IBM's internal business from proof of concept through production.
 Built Node JS REST API from scratch. Built multiple web applications from scratch. Built multiple React JS component libraries and NPM packages.}\\
-
-\entry
-{2013--2014}
-{CMU ResLife Technology Operations}
-{Mt. Pleasant, Michigan}
-{\emph{Web Application Developer} \\
-Responsible for learning and applying best practices in front-end and back-end web development. Used Django/Python to build and support web applications for university recreation and residence life.}\\
 
 %------------------------------------------------
 \end{entrylist}
 
 %----------------------------------------------------------------------------------------
-%	PROJECTS SECTION
+%	PUBLICATIONS SECTION
 %----------------------------------------------------------------------------------------
 
-\section{Personal Projects}
+\section{Publications}
 
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2016}
-{Comic Collector (Not In App Store)}
-{iOS - Objective-C}
-{A comic book collecting iOS application. Utilizing Realm and CocoaPods.}\\
+{08/2019}
+{What Are Jenkins Shared Libraries And Why You Should Use Them}
+{}
+{https://medium.com/@werne2j/jenkins-shared-libraries-part-1-5ba3d072536a}\\
 
 \entry
-{2014}
-{OneRepMax (Not In App Store)}
-{iOS - Swift}
-{Mobile app for power lifters to share new personal records on lifts}\\
+{09/2019}
+{How To Build Your Own Jenkins Shared Library}
+{}
+{https://medium.com/@werne2j/how-to-build-your-own-jenkins-shared-library-9dc129db260c}\\
 
 \entry
-{2013-2014}
-{MyStatBook (mystatbook.com)}
-{Django/Python}
-{Web app for baseball coaches to keep track of Rosters, Schedules and Statistics.}\\
+{10/2019}
+{Unit Testing a Jenkins Shared Library}
+{}
+{https://medium.com/@werne2j/unit-testing-a-jenkins-shared-library-9bfb6b599748}\\
+
+\entry
+{11/2019}
+{Collecting Code Coverage for a Jenkins Shared Library}
+{}
+{https://medium.com/@werne2j/collecting-code-coverage-for-a-jenkins-shared-library-c2d8f502732e}\\
 
 %------------------------------------------------
 \end{entrylist}
@@ -118,9 +117,9 @@ Responsible for learning and applying best practices in front-end and back-end w
 %----------------------------------------------------------------------------------------
 
 \section{Technologies}
-{JS(ES6/7)/HTML/CSS, iOS Development (Objective-C/Swift), Python, Go, } \\
-{Node JS, React JS, Django, Angular JS, React Native, Redux, Jest, Mocha, Enzyme} \\
-{Docker, Kubernetes, Kafka, Travis CI, Jenkins, Webpack} \\
+{JS/HTML/CSS, iOS Development (Objective-C/Swift), Python, Go, } \\
+{Node JS, React JS, React Native, Redux, Jest, Mocha, Enzyme} \\
+{Git, Docker, Kubernetes, Kafka, Travis CI, Jenkins, Webpack} \\
 {SQL, NoSQL, PostgreSQL, CouchDB, Redis} \\
 
 \end{document}
